2009-10-28  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.77

2009-10-26  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	* matchbox/core/mb-window-manager.c (mb_wm_unfocus_client): Don't
	focus any client if the touch screen lock is on to save some power.
	Related to NB#137523 - Browser causes X damage events when not visible
	- tk unlock case

	Release 0.2.76

2009-10-21  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	Plug.

	* matchbox/theme-engines/mb-wm-theme.c (mb_wm_theme_protect):
	  Don't lose the creat() file descriptor.

2009-10-21  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.75

2009-10-21  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	Quick test to see if git commit works.

	* matchbox/core/mb-wm-client-window.c
	(mb_wm_client_window_sync_properties):
	  Corrected the format string to avoid a compiler warning.

2009-10-20  Gordon Williams <gordon.williams@collabora.co.uk>

	Fixes for X memory leaks in h-d caused by GetOverlayWindow without a
	Release.
	
	* matchbox/comp-mgr/mb-wm-comp-mgr-clutter.c
	* matchbox/comp-mgr/mb-wm-comp-mgr-clutter.h: Added
	  mb_wm_comp_mgr_clutter_get_overlay_window to allow the overlay to be
	  accessed without calling X.

2009-10-19  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.74

	Patch from Laszlo Pere for NB#142250 - Unable to select all images in
	multiselection view after image viewer come back from background

	* matchbox/core/mb-wm-client.c
	(mb_wm_client_get_last_focused_transient): Don't return animation
	actors.

2009-10-16  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.73

	* matchbox/core/mb-wm-types.h, matchbox/core/mb-wm-atoms.c: Add
	_HILDON_WM_WINDOW_TYPE_HOME_APPLET atom.
	* matchbox/core/mb-window-manager.c (mb_wm_activate_client_real,
	mb_wm_unfocus_client): Do not automatically assign focus to home
	applets. Related to NB#140246 - Input method support to desktop

2009-10-14  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>
