@@ -250,6 +250,7 @@ typedef enum MBWMAtom
   MBWM_ATOM_NET_WM_ACTION_FULLSCREEN,
   MBWM_ATOM_NET_WM_ACTION_CHANGE_DESKTOP,
   MBWM_ATOM_NET_WM_ACTION_CLOSE,
+  MBWM_ATOM_HILDON_WM_ACTION_NO_TRANSITIONS,
 
   MBWM_ATOM_NET_WM_PING,
   MBWM_ATOM_NET_WM_PID,
